--- a/src/css/base.css
+++ b/src/css/base.css
@@ -308,14 +308,16 @@ main::after {
   border-radius: 8px;
   cursor: pointer;
   margin: 8vh 1vw 0;
+  box-shadow: 0 0 20px 0px #00000045;
 }
 
 .column__item-img {
   width: 100%;
   height: 100%;
-  background-size: cover;
-  background-position: 50% 20%;
   backface-visibility: hidden;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .column__item-caption {
